add bot stuff to vars tab of game menu, remember the map selection when changing modes
Former-commit-id: cd114a5b2e597a2c1f81a83515fccf12123be93f

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -138,7 +138,11 @@ newgui game [
 			]
 		]
 		if (< $l 0) [ maplist = (concat $maplist "?"); l = $n ]
-		mapnum = (listfind curmap $maplist [|| (strcmp $curmap (mapname)) (strcmp (format "maps/%1" $curmap) (mapname))])
+		if (!= $showngamegui 1) [
+			mapnum = (listfind curmap $maplist [|| (strcmp $curmap (mapname)) (strcmp (format "maps/%1" $curmap) (mapname))])
+		] [
+			mapnum = (listfind curmap $maplist [|| (strcmp $curmap $maptxt) (strcmp (format "maps/%1" $curmap) $maptxt)])
+		]
 		if (< $mapnum 0) [ mapnum = $l; extramap = (mapname) ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
@@ -169,12 +173,14 @@ newgui game [
 				guistrut 1
 				guilist [
 					guistrut 1
-					guiimage (format "maps/%1" $maptxt) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) 7 1 "textures/nothumb"
+					guistayopen [
+						guiimage (format "maps/%1" $maptxt) [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 7 1 "textures/nothumb"
+					]
 				]
 			]
-			guistrut 1
+			guistrut 2
 			guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
-			guitext (format "%1  selected on map %2" $yellow $maptxt) "info"
+			guitext (format " %1selected on map %2%3" $gray $yellow $maptxt) "blank"
 		]
 		guistrut 1
 		guilist [
@@ -226,6 +232,9 @@ newgui game [
 					vardef gravityscale		"gravity scale"
 					vardef jumpscale		"jump scale"
 					vardef speedscale		"speed scale"
+					vardef hitpushscale		"hit push scale"
+					vardef deadpushscale	"dead push scale"
+					vardef wavepushscale	"wave push scale"
 				]
 				guistrut 1
 				guilist [
@@ -254,18 +263,16 @@ newgui game [
 					varfld gravityscale 6
 					varfld jumpscale 6
 					varfld speedscale 6
+					varfld hitpushscale 6
+					varfld deadpushscale 6
+					varfld wavepushscale 6
 				]
 			]
 		]
 		guistrut 2
 		guilist [
-			guistrut 1
 			guilist [
 				guilist [
-					vardef hitpushscale		"hit push scale"
-					vardef deadpushscale	"dead push scale"
-					vardef wavepushscale	"wave push scale"
-					guistrut 1
 					guititle "timers"
 					vardef timelimit		"time limit"
 					vardef intermlimit		"intermission"
@@ -274,19 +281,21 @@ newgui game [
 					vardef regendelay		"regen delay"
 					vardef regentime		"regen time"
 					vardef spawnprotecttime	"spawn protect"
-					//vardef paintfreezetime	"paint freeze"
 					vardef spawndelay		"spawn delay"
 					vardef ctfspawndelay	"ctf spawn delay"
 					vardef stfspawndelay	"stf spawn delay"
 					vardef instaspawnscale	"insta spawn scale"
 					vardef paintspawnscale	"paint spawn scale"
+					guistrut 1
+					guititle "bots"
+					vardef botscale			"scale num bots"
+					vardef botratio			"human to bot ratio"
+					vardef botminskill		"bot min skill level"
+					vardef botmaxskill		"bot max skill level"
+					guistrut 1
 				]
 				guistrut 1
 				guilist [
-					varfld hitpushscale 6
-					varfld deadpushscale 6
-					varfld wavepushscale 6
-					guistrut 2
 					varfld timelimit 6
 					varfld intermlimit 6
 					varfld votelimit 6
@@ -294,12 +303,24 @@ newgui game [
 					varfld regendelay 6
 					varfld regentime 6
 					varfld spawnprotecttime 6
-					//varfld paintfreezetime 6
 					varfld spawndelay 6
 					varfld ctfspawndelay 6
 					varfld stfspawndelay 6
 					varfld instaspawnscale 6
 					varfld paintspawnscale 6
+					guistrut 2
+					varfld botscale 6
+					varfld botratio 6
+					varfld botminskill 6
+					varfld botmaxskill 6
+					guistrut 1
+				]
+			]
+			guilist [
+				guistayopen [
+					guibutton (format "%1add bot" $green) [addbot] "team"
+					guistrut 1
+					guibutton (format "%1delete bot" $red) [delbot] "player"
 				]
 			]
 		]
