restore ambient on rifle
Former-commit-id: f7150302e4b46d28f02937ad7ee4fe82c0017531

--- a/data/models/weapons/rifle/item/md5.cfg
+++ b/data/models/weapons/rifle/item/md5.cfg
@@ -6,7 +6,7 @@ md5skin mesh ../skin.jpg ../mask.jpg
 md5bumpmap mesh ../normal.png
 
 mdlspin 50
-mdlambient 10
+//mdlambient 10
 mdlspec 200
 mdlscale 12
 mdltrans -85 0 0
