--- a/data/models/weapons/rifle/vwep/md5.cfg
+++ b/data/models/weapons/rifle/vwep/md5.cfg
@@ -5,7 +5,7 @@ md5tag tag_muzzle tag_muzzle
 md5skin mesh ../skin.jpg ../mask.jpg
 md5bumpmap mesh ../normal.png
 
-mdlambient 10
+//mdlambient 10
 mdlspec 200
 mdlscale 12
 mdltrans -44 0 -13
