fix missing mapmenu guistrut, binaries
Former-commit-id: f38d09ead153434bd81aef5b533bf3958fd622d6

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -91,7 +91,7 @@ newgui help [
 	guibutton "get online support" "showgui support"
 ]
 
-maplists = [ "" "" lobbymaps lobbymaps mainmaps mainmaps missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
+maplists = [ "" "" lobbymaps lobbymaps lobbymaps lobbymaps missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
 
 showngamegui = 0
 mapselected = 0
@@ -251,11 +251,11 @@ newgui game [
 					varfld stffinish 6
 					guilist [
 						guilist [ varfld spawnweapon 2 ]
-						guitext (format "%1 %2" $gray (at $wepnames $spawnweapon))
+						guitext (format "%1%2" $gray (at $wepnames $spawnweapon))
 					]
 					guilist [
 						guilist [ varfld instaspawnweapon 2 ]
-						guitext (format "%1 %2" $gray (at $wepnames $instaspawnweapon))
+						guitext (format "%1%2" $gray (at $wepnames $instaspawnweapon))
 					]
 					varfld maprotate 6
 					varfld spawnrotate 6
@@ -296,6 +296,7 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
+					guistrut 1
 					varfld timelimit 6
 					varfld intermlimit 6
 					varfld votelimit 6
