added getteamicon command for sayteam bind
Former-commit-id: d5c0370a34fe8bd4938b5f83a07db16639c50cbd

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -106,7 +106,7 @@ bind K				[ kill ]
 bind TAB			[ showscores ]
 
 saytextcommand = 	[inputcommand "" [say $commandbuffer] "textures/conopen")]
-sayteamcommand = 	[inputcommand "" [sayteam $commandbuffer] (concatword "textures/team" (getteam))]
+sayteamcommand = 	[inputcommand "" [sayteam $commandbuffer] (concatword "textures/" (getteamicon))]
 
 bind T				saytextcommand
 bind BACKQUOTE		"saycommand /"
