waitbind so we can use floatspeed in waiting state, don't collide camera with mapmodels so we can go through doors, fallback for spectv when there's nobody around
Former-commit-id: 0e20cc0b3c009ae9f02b4ab2f05b256331622e60

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -281,6 +281,8 @@ specbind MOUSE2		[ spectator 0 ]
 //specbind MOUSE4	[ specfollow 1 ]
 //specbind MOUSE5	[ specfollow -1 ]
 
+waitbind LSHIFT		[ floatspeed 500; onrelease [ floatspeed 75 ] ]
+
 musicfiles = [
 	"loops/mitaman/blinkrage"
 	"loops/mitaman/dirtyboyz"
