Former-commit-id: 6172151bd6503d1914193b0b194149b59a52a2b1

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -149,7 +149,7 @@ newgui game [
 		showngamegui = 1
 	]
 	if (strcmp (at $maplist $mapnum) "?") [ maptxt = $extramap ] [ maptxt = (at $maplist $mapnum) ]
-	guilist [
+	guistayopen [ guilist [
 		guilist [
 			guilist [
 				guilist [
@@ -173,9 +173,7 @@ newgui game [
 				guistrut 1
 				guilist [
 					guistrut 1
-					guistayopen [
-						guiimage (format "maps/%1" $maptxt) [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 7 1 "textures/nothumb"
-					]
+					guiimage (format "maps/%1" $maptxt) [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 7 1 "textures/nothumb"
 				]
 			]
 			guistrut 2
@@ -207,13 +205,12 @@ newgui game [
 				guibutton (format "%1cancel" $red) [cleargui 1] "exit"
 			]
 		]
-	]
+	] ]
 	guitab "vars"
-	guilist [
+	guistayopen [ guilist [
 		guilist [
 			guilist [
 				guilist [
-					guititle "play"
 					vardef teamdamage		"team damage"
 					vardef maxhealth		"max health"
 					vardef maxcarry			"max carry weaps"
@@ -238,7 +235,6 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
-					guistrut 1
 					varfld teamdamage 6
 					varfld maxhealth 6
 					varfld maxcarry 6
@@ -273,7 +269,6 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
-					guititle "timers"
 					vardef timelimit		"time limit"
 					vardef intermlimit		"intermission"
 					vardef votelimit		"vote limit"
@@ -287,16 +282,13 @@ newgui game [
 					vardef instaspawnscale	"insta spawn scale"
 					vardef paintspawnscale	"paint spawn scale"
 					guistrut 1
-					guititle "bots"
 					vardef botscale			"scale num bots"
 					vardef botratio			"human to bot ratio"
 					vardef botminskill		"bot min skill level"
 					vardef botmaxskill		"bot max skill level"
-					guistrut 1
 				]
 				guistrut 1
 				guilist [
-					guistrut 1
 					varfld timelimit 6
 					varfld intermlimit 6
 					varfld votelimit 6
@@ -309,23 +301,26 @@ newgui game [
 					varfld stfspawndelay 6
 					varfld instaspawnscale 6
 					varfld paintspawnscale 6
-					guistrut 2
+					guistrut 1
 					varfld botscale 6
 					varfld botratio 6
 					varfld botminskill 6
 					varfld botmaxskill 6
-					guistrut 1
 				]
 			]
+			guistrut 1
 			guilist [
-				guistayopen [
-					guibutton (format "%1add bot" $green) [addbot] "team"
-					guistrut 1
-					guibutton (format "%1delete bot" $red) [delbot] "player"
-				]
+				guibutton (format "%1add bot" $green) [addbot] "team"
+				guistrut 7
+				guibutton (format "%1delete bot" $red) [delbot] "player"
+			]
+			guistrut 1
+			guilist [
+				guistrut 2
+				guibutton (format "%1reset all game variables" $orange) [resetvars] "exit"
 			]
 		]
-	]
+	] ]
 ] [
 	if (= (gamemode) 1) [ modeselected = 4 ] [ modeselected = (gamemode) ]
 	mutsselected = (mutscheck $modeselected (mutators))
@@ -337,56 +332,25 @@ newgui game [
 ]
 
 
-newgui bots [
-	if (> (gamemode) 1) [
-		guilist [
-			guistayopen [
-				guibutton "add bot "		addbot		player
-				guibutton "remove bot "		delbot		player
-			]
-		]
-		guistrut 1
-	]
-	guilist [
-		guilist [
-			vardef botbalance		"bot balance"
-			vardef botminskill		"min skill"
-			vardef botmaxskill		"max skill"
-		]
-		guistrut 1
-		guilist [
-			varfld botbalance 6
-			varfld botminskill 6
-			varfld botmaxskill 6
-		]
-	]
-]
-
 newgui servers [
 	guistayopen [
-		guititle "server list"
 		guilist [
 			guibutton "update "						updatefrommaster
 			guibutton "reset "						clearservers
 			guibutton "default sort "				serversortreset
-		]
-		guilist [
-			guilist [
-				vardef serverupdateinterval "interval"
-			]
-			guilist [
-				varfld serverupdateinterval 16
-			]
-		]
-		
-		guititle "quick connect"
-		guilist [
+			guilist [ guilist [
+				guilist [
+					vardef serverupdateinterval "interval"
+				]
+				guilist [
+					varfld serverupdateinterval 16
+				]
+			] ]
 			guibutton "localhost "						[connect localhost]
 			guibutton "lan "							lanconnect
 			guicheckbox "search lan "					searchlan
 		]
 	]
-	guitab "browse"
 	guiservers
 ]
 
