--- a/data/octa.cfg
+++ b/data/octa.cfg
@@ -2,8 +2,9 @@
 
 crawlspeed 50
 gravity 100
-jumpspeed 100
-movespeed 50
+jumpspeed 70
+impulespeed 50
+movespeed 70
 liquidscale 0.6
 liquidfric 20
 sinkfric 3
