tweak grenades to be more satisfying and faster when it is the spawnweapon, better dodamge flag checks, fraglimit variable, fixed sv_var resetting, turned 'point per hit' from legacy paintball cruft into variable scoringstyle
Former-commit-id: d1cc025b970116665841834568d3ccced82d48b7

--- a/data/maps/gladiator.cfg
+++ b/data/maps/gladiator.cfg
@@ -46,7 +46,7 @@
 // lightprecision 28
 // numplayers 7
 // adaptivesample 1
-// maptitle [Gladiator]
+maptitle [Gladiator by Anthony Cord]
 // waterfallcolour 0
 // floorz 0.867
 // shadowmapangle 0
