--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -173,7 +173,7 @@ newgui game [
 				guistrut 1
 				guilist [
 					guistrut 1
-					guiimage (format "maps/%1" $maptxt) [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 7 1 "textures/nothumb"
+					guiimage (format "maps/%1" $maptxt) [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $maptxt) ] 6 1 "textures/nothumb"
 				]
 			]
 			guistrut 2
@@ -218,6 +218,7 @@ newgui game [
 					vardef itemsallowed		"items allowed"
 					vardef itemdropping		"item dropping"
 					vardef kamikaze			"kamikaze"
+					vardef fraglimit		"frag limit"
 					vardef ctflimit			"ctf score limit"
 					vardef stflimit			"stf score limit"
 					vardef stffinish		"stf all finish"
@@ -242,6 +243,7 @@ newgui game [
 					varfld itemsallowed 6
 					varfld itemdropping 6
 					varfld kamikaze 6
+					varfld fraglimit 6
 					varfld ctflimit 6
 					varfld stflimit 6
 					varfld stffinish 6
@@ -269,6 +271,7 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
+					vardef scoringstyle		"scoring style"
 					vardef timelimit		"time limit"
 					vardef intermlimit		"intermission"
 					vardef votelimit		"vote limit"
@@ -289,6 +292,7 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
+					varfld scoringstyle 6
 					varfld timelimit 6
 					varfld intermlimit 6
 					varfld votelimit 6
@@ -338,17 +342,9 @@ newgui servers [
 			guibutton "update "						updatefrommaster
 			guibutton "reset "						clearservers
 			guibutton "default sort "				serversortreset
-			guilist [ guilist [
-				guilist [
-					vardef serverupdateinterval "interval"
-				]
-				guilist [
-					varfld serverupdateinterval 16
-				]
-			] ]
-			guibutton "localhost "						[connect localhost]
-			guibutton "lan "							lanconnect
-			guicheckbox "search lan "					searchlan
+			guibutton "localhost "					[connect localhost]
+			guibutton "lan "						lanconnect
+			guicheckbox "search lan "				searchlan
 		]
 	]
 	guiservers
