clarified connect buttons in servers menu
Former-commit-id: a1d741a04f306a7d4488dda021f0563e1efc7084

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -342,9 +342,11 @@ newgui servers [
 			guibutton "update "						updatefrommaster
 			guibutton "reset "						clearservers
 			guibutton "default sort "				serversortreset
-			guibutton "localhost "					[connect localhost]
-			guibutton "lan "						lanconnect
 			guicheckbox "search lan "				searchlan
+            guibar
+            guitext "connect: "
+            guibutton "localhost "                  [connect localhost]
+            guibutton "lan "                        lanconnect
 		]
 	]
 	guiservers
