cleared up localhost/lan connect buttons
Former-commit-id: c7a192b434c90fd9aaa9ee41ab4ef909c3154135

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -344,9 +344,8 @@ newgui servers [
 			guibutton "default sort "				serversortreset
 			guicheckbox "search lan "				searchlan
             guibar
-            guitext "connect: "
-            guibutton "localhost "                  [connect localhost]
-            guibutton "lan "                        lanconnect
+            guibutton "localhost "                  [connect localhost] server
+            guibutton "lan "                        lanconnect          server
 		]
 	]
 	guiservers
