fov as an alias for firstpersonfov
Former-commit-id: 953ba8ccaac26d92841b5ca7b5beab727a849eab

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -294,3 +294,6 @@ musicfiles = [
 	"loops/mitaman/bloodystreet"
 ]
 playmusic = [ music (at $musicfiles (rnd (listlen $musicfiles))) ]
+
+// some aliases
+fov = [ firstpersonfov $arg1 ] // people have complained /fov was removed
