--- a/src/Makefile.debug
+++ b/src/Makefile.debug
@@ -60,7 +60,7 @@ CLIENT_OBJS= \
 	game/world.o
 
 SINCLUDES= -Ishared -Iengine -Igame -Ienet/include
-SCXXFLAGS= -Wall -fsigned-char -DSTANDALONE -DIRC $(CXXOPTFLAGS) $(SINCLUDES)
+SCXXFLAGS= -Wall -fsigned-char -DSTANDALONE -DMASTERSERVER -DIRC $(CXXOPTFLAGS) $(SINCLUDES)
 
 SERVER_LIBS=-Lenet -lenet -lz
 SERVER_OBJS= \
@@ -68,21 +68,9 @@ SERVER_OBJS= \
 	shared/hash-standalone.o \
 	engine/command-standalone.o \
 	engine/irc-standalone.o	\
+	engine/master-standalone.o \
 	engine/server-standalone.o \
 	game/server-standalone.o
-
-DINCLUDES= -Ishared -Iengine -Igame -Ienet/include
-DCXXFLAGS= -Wall -fsigned-char -DSTANDALONE -DMASTERSERVER -DIRC $(CXXOPTFLAGS) $(DINCLUDES)
-
-DAEMON_LIBS=-Lenet -lenet -lz
-DAEMON_OBJS= \
-	shared/tools-daemon.o \
-	shared/hash-daemon.o \
-	engine/command-daemon.o \
-	engine/irc-daemon.o	\
-	engine/master-daemon.o \
-	engine/server-daemon.o \
-	game/server-daemon.o
 
 default: all
 
@@ -100,23 +88,14 @@ clean-client:
 clean-server:
 	@rm -fv $(SERVER_OBJS) bfserver
 
-clean-daemon:
-	@rm -fv $(DAEMON_OBJS) bfdaemon
-
 %-standalone.o:
 	$(CXX) $(SCXXFLAGS) -c -o $@ $(subst -standalone.o,.cpp,$@)
-
-%-daemon.o:
-	$(CXX) $(DCXXFLAGS) -c -o $@ $(subst -daemon.o,.cpp,$@)
 
 client:	libenet $(CLIENT_OBJS)
 	$(CXX) $(CXXFLAGS) -o bfclient $(CLIENT_OBJS) $(CLIENT_LIBS)
 
 server:	libenet $(SERVER_OBJS)
 	$(CXX) $(SCXXFLAGS) -o bfserver $(SERVER_OBJS) $(SERVER_LIBS)
-
-daemon:	libenet $(DAEMON_OBJS)
-	$(CXX) $(DCXXFLAGS) -o bfdaemon $(DAEMON_OBJS) $(DAEMON_LIBS)
 
 install-client: client
 	cp -v bfclient ../bin/bfclient
@@ -126,16 +105,11 @@ install-server: server
 	cp -v bfserver ../bin/bfserver
 	chmod +x ../bin/bfserver
 
-install-daemon: daemon
-	cp -v bfdaemon ../bin/bfdaemon
-	chmod +x ../bin/bfdaemon
-
 install: install-client install-server
 
 depend:
 	makedepend -fMakefile.debug -Y -Ishared -Iengine -Igame $(subst .o,.cpp,$(CLIENT_OBJS))
 	makedepend -fMakefile.debug -a -o-standalone.o -Y -Ishared -Iengine -Igame $(subst -standalone.o,.cpp,$(SERVER_OBJS))
-	makedepend -fMakefile.debug -a -o-daemon.o -Y -Ishared -Iengine -Igame $(subst -daemon.o,.cpp,$(DAEMON_OBJS))
 
 all: client server
 # DO NOT DELETE
@@ -398,6 +372,12 @@ engine/command-standalone.o: shared/ents.h shared/iengine.h shared/igame.h
 engine/command-standalone.o: engine/sound.h engine/world.h engine/octa.h
 engine/command-standalone.o: engine/lightmap.h engine/bih.h engine/texture.h
 engine/command-standalone.o: engine/model.h
+engine/master-standalone.o: shared/pch.h engine/engine.h shared/cube.h
+engine/master-standalone.o: shared/tools.h shared/command.h shared/geom.h
+engine/master-standalone.o: shared/ents.h shared/iengine.h shared/igame.h
+engine/master-standalone.o: engine/sound.h engine/world.h engine/octa.h
+engine/master-standalone.o: engine/lightmap.h engine/bih.h engine/texture.h
+engine/master-standalone.o: engine/model.h shared/crypto.h shared/hash.h
 engine/server-standalone.o: shared/pch.h engine/engine.h shared/cube.h
 engine/server-standalone.o: shared/tools.h shared/command.h shared/geom.h
 engine/server-standalone.o: shared/ents.h shared/iengine.h shared/igame.h
@@ -413,32 +393,3 @@ game/server-standalone.o: engine/model.h game/game.h game/ctf.h game/stf.h
 game/server-standalone.o: game/vars.h shared/hash.h game/stfmode.h
 game/server-standalone.o: game/ctfmode.h game/duelmut.h game/aiman.h
 game/server-standalone.o: game/auth.h game/extinfo.h
-
-shared/tools-daemon.o: shared/pch.h shared/tools.h
-shared/hash-daemon.o: shared/pch.h shared/tools.h shared/hash.h
-engine/command-daemon.o: shared/pch.h engine/engine.h shared/cube.h
-engine/command-daemon.o: shared/tools.h shared/command.h shared/geom.h
-engine/command-daemon.o: shared/ents.h shared/iengine.h shared/igame.h
-engine/command-daemon.o: engine/sound.h engine/world.h engine/octa.h
-engine/command-daemon.o: engine/lightmap.h engine/bih.h engine/texture.h
-engine/command-daemon.o: engine/model.h
-engine/master-daemon.o: shared/pch.h engine/engine.h shared/cube.h
-engine/master-daemon.o: shared/tools.h shared/command.h shared/geom.h
-engine/master-daemon.o: shared/ents.h shared/iengine.h shared/igame.h
-engine/master-daemon.o: engine/sound.h engine/world.h engine/octa.h
-engine/master-daemon.o: engine/lightmap.h engine/bih.h engine/texture.h
-engine/master-daemon.o: engine/model.h shared/crypto.h shared/hash.h
-engine/server-daemon.o: shared/pch.h engine/engine.h shared/cube.h
-engine/server-daemon.o: shared/tools.h shared/command.h shared/geom.h
-engine/server-daemon.o: shared/ents.h shared/iengine.h shared/igame.h
-engine/server-daemon.o: engine/sound.h engine/world.h engine/octa.h
-engine/server-daemon.o: engine/lightmap.h engine/bih.h engine/texture.h
-engine/server-daemon.o: engine/model.h
-game/server-daemon.o: shared/pch.h engine/engine.h shared/cube.h
-game/server-daemon.o: shared/tools.h shared/command.h shared/geom.h
-game/server-daemon.o: shared/ents.h shared/iengine.h shared/igame.h
-game/server-daemon.o: engine/sound.h engine/world.h engine/octa.h
-game/server-daemon.o: engine/lightmap.h engine/bih.h engine/texture.h
-game/server-daemon.o: engine/model.h game/game.h game/ctf.h game/stf.h
-game/server-daemon.o: game/vars.h shared/hash.h game/stfmode.h game/ctfmode.h
-game/server-daemon.o: game/duelmut.h game/aiman.h game/auth.h game/extinfo.h
