fixed missing zlib dependency for genkey
Former-commit-id: f8b7ca9f468c794d2f233846116bce1cde844eef

--- a/src/bloodfrontier.cbp
+++ b/src/bloodfrontier.cbp
@@ -265,6 +265,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="z" />
 					<Add directory="lib\mingw" />
 					<Add directory="lib" />
 				</Linker>
