remove PCH files on clean
Former-commit-id: 454a3fb255fd94175a0b64a1ca2e3206f7d16d43

--- a/src/Makefile
+++ b/src/Makefile
@@ -84,7 +84,7 @@ libenet: enet/Makefile
 clean: clean-client clean-server enet/Makefile
 
 clean-client:
-	@rm -fv $(CLIENT_OBJS) bfclient
+	@rm -fv $(CLIENT_PCH) $(CLIENT_OBJS) bfclient
 
 clean-server:
 	@rm -fv $(SERVER_OBJS) bfserver
